Documentacion de todo las tranformaciones acabado!!
